fix code background for contrast; A11y

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -148,7 +148,7 @@ $paragraph-text-rendering: optimizeLegibility;
 $code-color: $black;
 $code-font-family: $font-family-monospace;
 $code-font-weight: $global-weight-normal;
-$code-background: $light-gray;
+$code-background: $off-white;
 $code-border: 1px solid $medium-gray;
 $code-padding: rem-calc(2 5 1);
 $anchor-color: $primary-color;
